Possible fix navigation box, wrong colors

--- a/styles.css
+++ b/styles.css
@@ -14,19 +14,19 @@ h1 {
     justify-content: flex-end;
     list-style: none;
     margin: 0;
-    background: #424d3e;
+    background: deepskyblue;
 }
 
-.navigation a {
-    text-decoration: none;
-    display: block;
-    padding: 1em;
-    color: white;
-}
-
-    .navigation a:hover {
-        background: #53614e;
+    .navigation a {
+        text-decoration: none;
+        display: block;
+        padding: 1em;
+        color: white;
     }
+
+        .navigation a:hover {
+            background: #1565C0;
+        }
 
 @media all and (max-width: 800px) {
     .navigation {
@@ -43,11 +43,11 @@ h1 {
         .navigation a {
             text-align: center;
             padding: 10px;
-            border-top: 1px solid rgba(204, 235, 191,0.3);
-            border-bottom: 1px solid rgba(204, 235, 191,0.3);
+            border-top: 1px solid rgba(255, 255, 255,0.3);
+            border-bottom: 1px solid rgba(0, 0, 0, 0.1);
         }
 
-    .navigation li:last-of-type a {
-        border-bottom: none;
-    }
+        .navigation li:last-of-type a {
+            border-bottom: none;
+        }
 }
